force-app/main/default/objects/Expense__c/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archive?</label>
    <type>Checkbox</type>
</CustomField>