force-app/main/default/objects/Expense__c/fields/Debtor_Person__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debtor Person</label>
    <referenceTo>Debtor_Person__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>