force-app/main/default/objects/Expense__c/fields/Return_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_Status__c</fullName>
    <label>Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Not yet</fullName>
                <default>true</default>
                <label>Not yet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>