force-app/main/default/objects/Expense__c/fields/Savings_Type__c.field-meta.xml
<CustomField>
    <fullName>Savings_Type__c</fullName>
    <label>Savings Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FD</fullName>
            </value>
            <value>
                <fullName>Mutual Funds</fullName>
                <label>Mutual Funds &amp; shares</label>
            </value>
            <value>
                <fullName>RD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paytm Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>