force-app/main/default/objects/Expense__c/fields/Used_from_Loan__c.field-meta.xml
<CustomField>
    <fullName>Used_from_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check this box if you are utilising loan amount for this transaction</inlineHelpText>
    <label>Used from home loan?</label>
    <type>Checkbox</type>
</CustomField>